# aurdex

./: .gitignore  README.md  pyproject.toml
.github/workflows/: release.yml
dev/: PKGBUILD
src/aurdex/: __init__.py  audex.py  aurdex.py  cli.py  db.py  formatters.py  main.py  widgets.py
src/aurdex/tcss/: comments.tcss  gitview.tcss  main.tcss  profile.tcss
src/auricle/: __init__.py  auricle.py
