[project]
name = "aurdex"
version = "0.0.7"
description = "terminal user interface for browsing AUR package metadata"
authors = [{ name = "involution" }]
license = { text = "Apache-2.0" }
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
  "textual>=0.49.0",
  "rich>=13.0.0",
  "appdirs>=1.4.4",
  "beautifulsoup4>=4.13",
  "httpx>=0.27.0",
]
[project.optional-dependencies]
git = ["pygit2"]
alpm = ["pyalpm"]

[project.scripts]
aurdex = "aurdex.cli:main"

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
aurdex = ["tcss/*.tcss"]
